--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
   <body>
     <header>
       <h1>Metric/Imperial Unit Conversion</h1>
-      <input type="text" />
-      <button>Convert</button>
+      <input id="input-el" type="text" value="20" />
+      <button id="btn-el">Convert</button>
     </header>
     <main>
       <article class="conversion" id="length">
         <h2>Length (Meter/Feet)</h2>
-        <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+        <p id="p-length">20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
       </article>
       <article class="conversion" id="volume">
         <h2>Volume (Liters/Gallons)</h2>
-        <p>20 liters = 5.284 gallons | 20 gallons = 75.708 liters</p>
+        <p id="p-volume">
+          20 liters = 5.284 gallons | 20 gallons = 75.708 liters
+        </p>
       </article>
       <article class="conversion" id="mass">
         <h2>Mass (Kilograms/Pounds)</h2>
-        <p>20 kilos = 44.092 pounds | 20 pounds = 9.072 kilos</p>
+        <p id="p-mass">20 kilos = 44.092 pounds | 20 pounds = 9.072 kilos</p>
       </article>
     </main>
   </body>
