--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>Metric/Imperial Unit Conversion</h1>
-      <input id="input-el" type="text" value="20" />
+      <input id="input-el" type="text" placeholder="20" />
       <button id="btn-el">Convert</button>
     </header>
     <main>
